hybrid-multi-cloud-k8s/k8s-configs/istio/03-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: my-microservice
spec:
  hosts:
  - "example.com"
  gateways:
  - my-microservice-gateway
  http:
  - match:
    - uri:
        prefix: /my-microservice
    route:
    - destination:
        host: my-microservice
        port:
          number: 8080
