hybrid-multi-cloud-k8s/k8s-configs/istio/04-destinationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: my-microservice
spec:
  host: my-microservice
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
